RESOLVED FIXED311444
Confusing error message gets logged after a failed declarativeNetRequest operation
https://bugs.webkit.org/show_bug.cgi?id=311444
Summary Confusing error message gets logged after a failed declarativeNetRequest oper...
Kiara Rose
Reported 2026-04-03 15:01:46 PDT
Confusing error message gets logged after a failed declarativeNetRequest operation. we're logging a number instead of the DNR rule type
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-03 15:05:07 PDT
Kiara Rose
Comment 2 2026-04-03 15:22:06 PDT
EWS
Comment 3 2026-04-03 23:07:04 PDT
Committed 310560@main (bc38d9793826): <https://commits.webkit.org/310560@main> Reviewed commits have been landed. Closing PR #62001 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.