Confusing error message gets logged after a failed declarativeNetRequest operation https://bugs.webkit.org/show_bug.cgi?id=311444 rdar://174040915

Reviewed by Brian Weinstein and Timothy Hatcher.

We're logging a number instead of the rule type. Convert the storage type enum to a string before
logging and constructing the error messages.

* Source/WebKit/UIProcess/Extensions/WebExtensionDeclarativeNetRequestSQLiteStore.cpp:
(WebKit::WebExtensionDeclarativeNetRequestSQLiteStore::WebExtensionDeclarativeNetRequestSQLiteStore):
(WebKit::WebExtensionDeclarativeNetRequestSQLiteStore::addRules):
(WebKit::WebExtensionDeclarativeNetRequestSQLiteStore::deleteRules):
(WebKit::WebExtensionDeclarativeNetRequestSQLiteStore::insertRule):
* Source/WebKit/UIProcess/Extensions/WebExtensionDeclarativeNetRequestSQLiteStore.h:
(WebKit::toString):

Canonical link: https://commits.webkit.org/310560@main